// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ComputedStyleInput playground 1`] = `
<div>
  <div
    id="#source"
    style={
      Object {
        "background": "var(--some-background)",
        "color": "var(--some-color)",
      }
    }
  >
    Hello.
  </div>
  <input
    className=""
    disabled={false}
    onChange={[Function]}
    type="color"
    value={null}
  />
  <input
    className=""
    disabled={false}
    onChange={[Function]}
    type="color"
    value={null}
  />
</div>
`;

exports[`Storyshots DrawerLayout playground 1`] = `
<div>
  <style>
    .sb-show-main { margin: 0; }
  </style>
  <div
    style={
      Object {
        "height": "100vh",
        "width": "100vw",
      }
    }
  >
    <div
      className="container"
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <div
        className="drawer  left open"
        style={
          Object {
            "height": "100%",
            "width": "30%",
          }
        }
      >
        <div
          className="handle"
          onMouseDown={[Function]}
          role="presentation"
        />
        <div
          className="content"
        >
          <div
            style={
              Object {
                "color": "white",
                "height": "100%",
                "width": "100%",
              }
            }
          >
            I am drawer content. Yippee!!!
          </div>
        </div>
      </div>
      <div
        className="viewport"
      >
        <div
          style={
            Object {
              "color": "black",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in sem magna. Aliquam ultrices convallis cursus. In hac habitasse platea dictumst. Quisque eu tellus magna. Curabitur aliquam luctus ex. Maecenas purus arcu, tincidunt non sapien quis, finibus vestibulum ante.
          </p>
          <p>
            Curabitur vulputate et ligula in congue. Phasellus ac imperdiet libero, sagittis interdum elit. Suspendisse potenti.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HelloWorld custom style 1`] = `
<button
  className="helloWorld"
  onClick={[Function]}
>
  <h1
    className="title"
    style={
      Object {
        "backgroundColor": "pink",
        "border": "5px dotted limegreen",
      }
    }
  >
    Hello 
    custom style
  </h1>
</button>
`;

exports[`Storyshots HelloWorld playground 1`] = `
<button
  className="helloWorld"
  onClick={[Function]}
>
  <h1
    className="title"
  >
    Hello 
    World!
  </h1>
</button>
`;

exports[`Storyshots HelloWorld with rainbow 1`] = `
<button
  className="helloWorld"
  onClick={[Function]}
>
  <h1
    className="title rainbow "
  >
    Hello 
    World!
  </h1>
</button>
`;

exports[`Storyshots HelloWorld with title 1`] = `
<button
  className="helloWorld"
  onClick={[Function]}
>
  <h1
    className="title"
  >
    Hello 
    home
  </h1>
</button>
`;

exports[`Storyshots Pane playground 1`] = `
<section
  className="container  open"
>
  <div
    className="innerContainer"
  >
    <header>
      <button
        className="dropdown"
        onClick={[Function]}
      >
        <span
          className="title"
        />
        <span
          className="icon"
        />
      </button>
    </header>
    <main />
  </div>
</section>
`;

exports[`Storyshots SideBarLayout playground 1`] = `
<div>
  <style>
    .sb-show-main { margin: 0; }
  </style>
  <div
    style={
      Object {
        "height": "100vh",
        "width": "100vw",
      }
    }
  >
    <div
      className="container "
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <div
        className="sidebar left"
      >
        <div>
          <button>
            1
          </button>
          <button>
            2
          </button>
          <button>
            3
          </button>
          <button>
            4
          </button>
          <button>
            5
          </button>
        </div>
      </div>
      <div
        className="viewport"
      >
        <div
          style={
            Object {
              "color": "black",
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in sem magna. Aliquam ultrices convallis cursus. In hac habitasse platea dictumst. Quisque eu tellus magna. Curabitur aliquam luctus ex. Maecenas purus arcu, tincidunt non sapien quis, finibus vestibulum ante.
          </p>
          <p>
            Curabitur vulputate et ligula in congue. Phasellus ac imperdiet libero, sagittis interdum elit. Suspendisse potenti.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots StyleInput playground 1`] = `
<div>
  <div
    id="#source"
    style={
      Object {
        "color": "var(--color)",
      }
    }
  >
    Hiya.
  </div>
  <input
    className=""
    disabled={false}
    onChange={[Function]}
    type="color"
    value={null}
  />
</div>
`;
